--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yelpcamp",
+  "name": "mtpProfiles",
   "version": "1.0.0",
   "description": "version1",
   "main": "app.js",
@@ -16,6 +16,7 @@
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.5",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0"
